[gd_scene load_steps=6 format=3 uid="uid://dwy6jpf5ox0fk"]

[ext_resource type="Script" path="res://scenes/displays/disp_wave.gd" id="1_rpsif"]
[ext_resource type="Texture2D" uid="uid://clc8il64fr6ik" path="res://art/displays/disp_wave1.png" id="2_o1aru"]
[ext_resource type="Texture2D" uid="uid://b7n6q8t8rdtg8" path="res://art/displays/disp_wave2.png" id="3_8nbn3"]
[ext_resource type="Texture2D" uid="uid://yafelohs0vsi" path="res://art/displays/disp_wave3.png" id="4_q11oa"]
[ext_resource type="Texture2D" uid="uid://pdkht8wwufqj" path="res://art/displays/disp_wave4.png" id="5_ts8dx"]

[node name="disp_wave" type="Node2D"]
script = ExtResource("1_rpsif")

[node name="DispFirstWave" type="Sprite2D" parent="."]
position = Vector2(52, 39)
texture = ExtResource("2_o1aru")

[node name="DispSecWave" type="Sprite2D" parent="."]
visible = false
position = Vector2(52, 39)
texture = ExtResource("3_8nbn3")

[node name="DispThirdWave" type="Sprite2D" parent="."]
visible = false
position = Vector2(52, 39)
texture = ExtResource("4_q11oa")

[node name="DispFourWave" type="Sprite2D" parent="."]
visible = false
position = Vector2(52, 39)
texture = ExtResource("5_ts8dx")
